History navigation, images in questions, session management
Now uses angular-route for routing and bookmarks
Now uses angular-sanitize ng-bind-html  support of HTML content in question.details
Bootstrap now logs activity and uses RouteManager
RouteManager now supports question history navigation
Implemented SessionController - now auto-navigates to Login if session is invalid
QuizBuilder enhanced to support seekTo questions by index
ScoreBuilder enhanced to load question details (if available)
Quiz data now
- has `details` field which supports HTML content
- now supports <img /> tags in the `details` field
Templates now show quiz name, have better use of className(s) and id(s)

--- a/client/assets/views/login.tpl.html
+++ b/client/assets/views/login.tpl.html
@@ -2,7 +2,7 @@
 
     <header>
         <div class="logo">
-            <h1 style="position:relative;top:-6px;"> <a href="#"><img src="" alt="Mindspace, LLC.">Mindspace Consulting</a> </h1>
+            <h1 style="position:relative;top:-6px;">Quizzler Online</h1>
         </div>
 
         <div class="login_btn" ng-click="register();"><a href="#/signup">Register</a></div>
