--- a/client/assets/views/login.tpl.html
+++ b/client/assets/views/login.tpl.html
@@ -23,7 +23,7 @@
                 <div class="textbox-wrap">
                     <div class="input-group">
                         <span class="input-group-addon "><i class="icon-user icon-color"></i></span>
-                        <input type="email" ng-model="email" placeholder="eMail" class="form-control" >
+                        <input type="email" ng-model="email" placeholder="eMail" required="true" class="form-control" >
                         <span class="field_msg"></span>
                     </div>
                 </div>
@@ -32,7 +32,7 @@
                 <div class="textbox-wrap">
                     <div class="input-group">
                         <span class="input-group-addon "><i class="icon-key icon-color"></i></span>
-                        <input type="password" ng-model="password" class="form-control" placeholder="Password" >
+                        <input type="password" ng-model="password" class="form-control" required="true" placeholder="Password" >
                         <span class="field_msg"></span>
                     </div>
                 </div>
@@ -53,9 +53,9 @@
     </div>
 
     <div class="login-form-links link2">
-        <h4 class="red">Forget your Password?</h4>
+        <h4 class="blue">Forget your Password?</h4>
         <span>Dont worry</span>
-        <a href="#" class="red">Click Here</a>
+        <a href="#" class="blue">Click Here</a>
         <span>to Get New One</span>
     </div>
 
