Fixed LoginControllerSpec to pass tests...

--- a/client/assets/views/score.tpl.html
+++ b/client/assets/views/score.tpl.html
@@ -2,7 +2,7 @@
 
     <header>
         <div class="scoring-title">
-            <h1>Quiz Results: &nbsp; '{{ title }}'</h1>
+            <h1>Quiz Scoring results: &nbsp; '{{ title }}'</h1>
         </div>
 
     </header>
