Updates to package and use of relative urls.
Fixes to urls to be relative to the index.html instead of webfoot or absolute.
Updates to package.json

--- a/client/assets/views/score.tpl.html
+++ b/client/assets/views/score.tpl.html
@@ -63,7 +63,7 @@
     </div>
 
     <div class="next-action clearfix">
-        <button ng-click="logout()" class="btn btn-success pull-right blue-btn">Logout</button>
+        {{ email }}<button ng-click="logout()" class="btn btn-success pull-right blue-btn">Logout</button>
     </div>
 
 </div>
