--- a/assets/views/login.tpl.html
+++ b/assets/views/login.tpl.html
@@ -59,6 +59,12 @@
         <span>to Get New One</span>
     </div>
 
+    <footer style="font-size:10px; margin-top:25px; text-align: center;">
+
+            <Copyright> Copyright 2013, Mindspace LLC - All Rights Reserved </Copyright> <br/>
+            <a href="https://github.com/ThomasBurleson/angularjs-Quizzler" class="source">GitHub Source</a>
+
+    </footer>
 
 </div>
 
